<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">計算やらないか？</string>
    <string name="app_title">計算\nやらないか？</string>
    <string name="btnNormalMode">通常モード</string>
    <string name="btnEndlessMode">エンドレスモード</string>
    <string name="btnRetry">もう一回</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnClear">Clear</string>
    <string name="btnEnter">Enter</string>
    <string name="status">%1$d / %2$d</string>
    <string name="statusZero">0 / 0</string>
    <string name="time1Min">01:00:00</string>
    <string name="result">結果</string>
    <string name="percent">%1$.3f %%</string>
    <string name="percentZero">0 %</string>
    <string name="highScore">ハイスコア：%1$d</string>
    <string name="highScoreUpdate">ハイスコア更新！ %1$d -> %2$d</string>
    
</resources>