<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="question ?"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="answer"
            android:layout_marginTop="32dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="inputNumber"
                    style="@android:attr/buttonBarButtonStyle"
                    android:text="@string/btn1" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="inputNumber"
                    style="@android:attr/buttonBarButtonStyle"
                    android:text="@string/btn2" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="inputNumber"
                    style="@android:attr/buttonBarButtonStyle"
                    android:text="@string/btn3" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="inputNumber"
                    style="@android:attr/buttonBarButtonStyle"
                    android:text="@string/btn4" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="inputNumber"
                    style="@android:attr/buttonBarButtonStyle"
                    android:text="@string/btn5" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="inputNumber"
                    style="@android:attr/buttonBarButtonStyle"
                    android:text="@string/btn6" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="inputNumber"
                    style="@android:attr/buttonBarButtonStyle"
                    android:text="@string/btn7" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="inputNumber"
                    style="@android:attr/buttonBarButtonStyle"
                    android:text="@string/btn8" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="inputNumber"
                    style="@android:attr/buttonBarButtonStyle"
                    android:text="@string/btn9" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="inputNumber"
                    style="@android:attr/buttonBarButtonStyle"
                    android:text="@string/btn0" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="inputClear"
                    style="@android:attr/buttonBarButtonStyle"
                    android:text="@string/btnClear" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="inputEnter"
                    style="@android:attr/buttonBarButtonStyle"
                    android:text="@string/btnEnter" />
            </TableRow>
        </TableLayout>

        </LinearLayout>

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textColor="@color/blue"
        android:text="@string/statusZero" />

</RelativeLayout>